fix unwanted body scrolling making menu invisible

--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -15,6 +15,7 @@
 
 html, body
   height: 100%
+  overflow: hidden
 
 body
   @extend .relative
